--- a/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
+++ b/src/main/resources/group16/smartflightcheckinkiosk/FlightList.fxml
@@ -8,39 +8,34 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="FlightList" prefHeight="220.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
+<VBox fx:id="FlightList" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group16.smartflightcheckinkiosk.Controller.FlightListController">
    <children>
-   <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-     <columnConstraints>
-       <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="10.0" prefWidth="600.0" />
-       <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="0.0" prefWidth="0.0" />
-     </columnConstraints>
-     <rowConstraints>
-       <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
-       <RowConstraints maxHeight="260.0" minHeight="10.0" prefHeight="260.0" vgrow="SOMETIMES" />
-       <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="71.0" vgrow="SOMETIMES" />
-     </rowConstraints>
-      <children>
-         <Button fx:id="b7" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+      <AnchorPane prefHeight="600.0" prefWidth="400.0">
+         <children>
+            <Text layoutX="14.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check-in Status" />
+            <Text layoutX="66.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
+            <Text layoutX="228.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
+            <Text layoutX="346.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
+            <Text layoutX="434.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
+            <Text layoutX="66.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
+            <Text layoutX="66.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
+            <Text layoutX="66.0" layoutY="459.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String Name" />
+            <Text layoutX="228.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
+            <Text layoutX="228.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
+            <Text layoutX="228.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Gender" wrappingWidth="160.48046875" />
+            <Text layoutX="63.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
+            <Text layoutX="210.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender:" />
+            <Text layoutX="326.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SeatNo:" />
+            <Text layoutX="450.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" />
+            <Text layoutX="346.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
+            <Text layoutX="346.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
+            <Text layoutX="346.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="String SeatNo" />
+            <Text layoutX="434.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
+            <Text layoutX="434.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
+            <Text layoutX="434.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Char Status" wrappingWidth="144.46875" />
+         <Button fx:id="b7" layoutX="227.0" layoutY="585.0" mnemonicParsing="false" onAction="#gotoCheckFlight" text="Go back">
       </Button>
-         
-         <Label alignment="TOP_LEFT" contentDisplay="TOP" text="Check-in status:">
-            <GridPane.margin>
-               <Insets left="50.0" />
-            </GridPane.margin>
-         </Label>
-         <TableView focusTraversable="false" prefHeight="198.0" prefWidth="560.0" GridPane.rowIndex="1">
-           <columns>
-             <TableColumn id="Name" prefWidth="120.0" text="Name" />
-             <TableColumn id="Gander" prefWidth="127.0" text="Gender" />
-               <TableColumn prefWidth="189.0" text="Seat Number" />
-               <TableColumn prefWidth="123.0" text="Status" />
-           </columns>
-            <GridPane.margin>
-               <Insets left="20.0" right="20.0" />
-            </GridPane.margin>
-         </TableView>
-      </children>
-   </GridPane>
+         </children>
+      </AnchorPane>
    </children>
 </VBox>
